--- a/css2/loading.css
+++ b/css2/loading.css
@@ -1,30 +1,27 @@
-#loading-screen {
+.loading-screen {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #fff;
-    z-index: 9999;
+    background: #ffffff;
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 9999;
+    transition: opacity 0.5s ease-out;
 }
 
-#loading-screen .spinner {
+.spinner {
     width: 50px;
     height: 50px;
-    border: 5px solid #53b848;
-    border-top: 5px solid #fff;
+    border: 5px solid #f3f3f3;
+    border-top: 5px solid #53b848;
     border-radius: 50%;
     animation: spin 1s linear infinite;
 }
 
 @keyframes spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
